--- a/ContactUs.html
+++ b/ContactUs.html
@@ -5,8 +5,9 @@
 
         <style>
             body{
-                background-color: #1e1e1e;
+                background-color: rgb(255, 255, 255);
                 font-family: Arial, sans-serif;
+                padding: 20px;
             }
             .container{
                 width: 100%;
@@ -14,16 +15,17 @@
                 margin: 0 auto;
                 padding: 20px;
                 box-sizing: border-box;
+
             }
             form{
-                background-color: #f5f5f5;
+                background-color:rgb(77, 121, 164);
                 padding: 20px;
-                border-radius: 5px;
+                border-radius: 25px;
             }
             input[type="text"], textarea{
                 width: 100%;
                 padding: 12px;
-                border: 1px solid #ccc;
+                border: 2px solid #000000;
                 border-radius: 4px;
                 margin: 8px 0;
                 box-sizing: border-box;
@@ -32,11 +34,20 @@
 
             }
             .header{
-                background-color: #333;
-                color: #fff;
+                background-color:rgb(77, 121, 164);
+                color: #000000;
                 text-align: center;
-                padding: 20px;
+                padding: 30px;
+                font-size: 20px;
             }
+            button {
+            padding: 10px;
+            background-color: #4CAF50;
+            color: #fff;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
         </style>
 
 
@@ -44,8 +55,8 @@
     <body>
 
         <div class="header">
-            <h1>About Us</h1>
-            <p>Here are some of our events!</p>
+            <h1>Contact Us</h1>
+            <p>Feel free to contact us for any question or complaints!</p>
         </div>
 
         <div class="container">
@@ -54,7 +65,7 @@
                 <input type="text" id="name">
                 <div class="error-message" id="nameError"></div>
 
-                <label>LastName:</label>
+                <label>Lastname:</label>
                 <input type="text" id="lastname">
                 <div class="error-message" id="lastnameError"></div>
             
