--- a/ContactUs.html
+++ b/ContactUs.html
@@ -21,6 +21,8 @@
                 background-color:rgb(77, 121, 164);
                 padding: 20px;
                 border-radius: 25px;
+                box-shadow: 60px 10px 25px rgba(0, 0, 0, 0.2);
+
             }
             input[type="text"], textarea{
                 width: 100%;
