--- a/SignUp (1).html
+++ b/SignUp (1).html
@@ -6,22 +6,26 @@
             <style>
                 body {
                     font-family: Arial, sans-serif;
-                    background-image: url(Photos/backround2.jpg);
+                    background-image: url(backround.jpg);
                     background-size: 1600px;
+                    background-color: antiquewhite;
+                    height: 100vh;
+                    background-size: cover;
+                    background-repeat: no-repeat;
+                    background-position: center;
 
                 }
 
                 form {
                     width: 300px;
-                    margin: 0 auto;
-                    color: #ffffff;
-                    size: 15px;
-                    background-color: rgba(136, 149, 170, 0.8); 
-                    padding: 20px;
-                    border-radius: 15px;
-                    box-shadow: 0 0 10px 10px rgba(206, 194, 194, 0.8); 
-                    backdrop-filter: blur(10px);
-
+                     margin: 0 auto;
+                     color: #ffffff;
+                     size: 15px;
+                     background-color: rgba(136, 149, 170, 0.8); 
+                     padding: 20px;
+                     border-radius: 15px;
+                     box-shadow: 0 0 10px 10px rgba(206, 194, 194, 0.8); 
+                     backdrop-filter: blur(10px);
                 }
 
                 .header{
