--- a/MainPage.html
+++ b/MainPage.html
@@ -112,7 +112,7 @@
         <h1 style ="font-size: 100px; color:#000000;">Animal Event</h1>
         <p>Join us for an exciting animal event!</p>
         <ul class="navbar">
-            <li><a href=" ">About Us</a></li>   <li><a href=" ">Log In</a></li>   <li><a href="ContactUs.html">Contact Us</a></li>
+            <li><a href="AboutUs.html">About Us</a></li>   <li><a href="Login (1).html">Log In</a></li>   <li><a href="ContactUs.html">Contact Us</a></li>
            
         </ul>
     </div>
