Rregullimi i path-it per foto

--- a/SignUp (1).html
+++ b/SignUp (1).html
@@ -6,7 +6,7 @@
             <style>
                 body {
                     font-family: Arial, sans-serif;
-                    background-image: url(backround.jpg);
+                    background-image: url(Photos/backround.jpg);
                     background-size: 1600px;
                     background-color: antiquewhite;
                     height: 100vh;
