added header to all pages

--- a/contact.html
+++ b/contact.html
@@ -59,6 +59,12 @@
         <div class="header">
             <h1>Contact Us</h1>
             <p>Feel free to contact us for any question or complaints!</p>
+            <ul class="navbar">
+                <li><a href="about.html">About Us</a></li>   
+                <li><a href="login.html">Log In</a></li> 
+                <li><a href="news.html">News</a></li>  
+                <li><a href="contact.html">Contact Us</a></li>
+            </ul>
         </div>
 
         <div class="container">
