--- a/login.html
+++ b/login.html
@@ -57,10 +57,16 @@
             <body>
 
                 <div class="header">
-                   <h1>Log In</h1>
-                        <p>Log In to get access to the tickets NOW!</p>
-                        <p>Christmas Discount!!!!</p> 
-                        <p>35% of first 10 ticket purchases!</p>
+                    <h1>Log In</h1>
+                    <p>Log In to get access to the tickets NOW!</p>
+                    <p>Christmas Discount!!!!</p> 
+                    <p>35% of first 10 ticket purchases!</p>
+                    <ul class="navbar">
+                        <li><a href="about.html">About Us</a></li>   
+                        <li><a href="login.html">Log In</a></li> 
+                        <li><a href="news.html">News</a></li>  
+                        <li><a href="contact.html">Contact Us</a></li>
+                    </ul>
                 </div>
 
 
