--- a/news.html
+++ b/news.html
@@ -40,6 +40,12 @@
             <div class="header">
                 <h1>Ani/News</h1>
                 <p>Keep updated with whats happening here!!</p>
+                <ul class="navbar">
+                    <li><a href="about.html">About Us</a></li>   
+                    <li><a href="login.html">Log In</a></li> 
+                    <li><a href="news.html">News</a></li>  
+                    <li><a href="contact.html">Contact Us</a></li>
+                </ul>
             </div>
             
             <!--Add more article from database later -->
