--- a/about.html
+++ b/about.html
@@ -101,7 +101,13 @@
 
             <div class="header">
                 <h1>About Us</h1>
-                   <p>Take a look of our events!</p>
+                <p>Take a look of our events!</p>
+                <ul class="navbar">
+                    <li><a href="about.html">About Us</a></li>   
+                    <li><a href="login.html">Log In</a></li> 
+                    <li><a href="news.html">News</a></li>  
+                    <li><a href="contact.html">Contact Us</a></li>
+                </ul>
             </div>
 
    
